name:                LambdaCalculus
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Term
                     , Reduce
                     , Constants
                     , Typing
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite LambdaCalculus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LambdaCalculus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
